Add UI deployment

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -7,3 +7,6 @@ run-put:
 	go run main.go put
 sso:
 	aws sso login
+
+publish-latest:
+	docker buildx build --platform linux/amd64 -t jakubknejzlik/compendium . && docker push jakubknejzlik/compendium
