--- a/ui/package.json
+++ b/ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@lifeomic/react-vis-network": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.0",
@@ -16,10 +17,8 @@
     "aws-appsync-auth-link": "^3.0.7",
     "aws-appsync-react": "^4.0.11",
     "aws-appsync-subscription-link": "^3.0.10",
-    "graphql": "^16.3.0",
-    "graphql-tag": "^2.12.6",
+    "graphql": "^15.8.0",
     "react": "^18.0.0",
-    "react-apollo": "^3.1.5",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
