Update in progress

--- a/ui/package.json
+++ b/ui/package.json
@@ -21,42 +21,42 @@
     }
   },
   "dependencies": {
-    "@apollo/client": "^3.7.1",
     "@lifeomic/react-vis-network": "^1.1.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.27",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.1",
     "antd": "^4.23.6",
     "aws-appsync": "^4.1.5",
     "aws-appsync-auth-link": "^3.0.7",
     "aws-appsync-react": "^4.0.11",
     "aws-appsync-subscription-link": "^3.0.10",
-    "esbuild": "^0.17.5",
     "graphql": "^15.8.0",
-    "react": "^18.0.0",
-    "typescript": "^4.6.3",
     "vis-data": "^7.1.4",
     "vis-network": "^9.1.2",
-    "vis-react": "^0.5.1",
-    "web-vitals": "^2.1.4"
+    "vis-react": "^0.5.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.27",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
     "@vitejs/plugin-react": "^3.0.1",
     "c8": "^7.12.0",
     "eslint": "^8.33.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^21.1.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
     "react-test-renderer": "^18.2.0",
+    "typescript": "^4.6.3",
     "vite": "^4.0.4",
     "vite-plugin-dts": "^1.7.1",
     "vitest": "^0.28.3"
+  },
+  "peerDependencies": {
+    "@apollo/client": "^3.7.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "scripts": {
     "dev": "vite",
