--- a/ui/package.json
+++ b/ui/package.json
@@ -1,14 +1,12 @@
 {
-    "name": "lib-example",
-    "private": true,
-    "workspaces": {
-        "packages": [
-            "packages/*",
-            "sites/*"
-        ]
-    },
-    "devDependencies": {
-        "prettier": "2.5.1",
-        "pretty-quick": "3.1.3"
-    }
+  "name": "compendium",
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "sites/*"
+  ],
+  "devDependencies": {
+    "prettier": "2.5.1",
+    "pretty-quick": "3.1.3"
+  }
 }
