--- a/examples/compendium-cdk/package.json
+++ b/examples/compendium-cdk/package.json
@@ -2,7 +2,6 @@
   "name": "compendium",
   "version": "0.1.0",
   "dependencies": {
-    "@types/node": "^18.11.18",
-    "compendium-cdk": "file:../.."
+    "compendium-cdk": "*"
   }
 }
