--- a/package.json
+++ b/package.json
@@ -1,39 +1,21 @@
 {
-  "name": "compendium-cdk",
+  "name": "compendium",
   "description": "Compendium for various stuff built on serverless stack",
   "version": "0.0.2",
-  "module": "lib/index.js",
-  "main": "lib/index.js",
   "author": {
     "name": "Jakub Knejzlik",
     "email": "jakub.knejzlik@gmail.com"
   },
-  "dependencies": {
-    "@aws-cdk/aws-appsync-alpha": "^2.55.1-alpha.0",
-    "@aws-sdk/types": "^3.127.0",
-    "@tsconfig/node16": "^1.0.1",
-    "aws-cdk": "^2.39.0",
-    "aws-cdk-lib": "2.59.0",
-    "constructs": "^10.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
-  },
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest"
-  },
+  "workspaces": [
+    "packages/*",
+    "sites/*"
+  ],
   "devDependencies": {
-    "@types/jest": "^29.2.4",
-    "@types/node": "18.11.15",
-    "aws-cdk-lib": "2.59.0",
-    "constructs": "^10.0.0",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
-    "typescript": "~4.9.4"
-  },
-  "peerDependencies": {
-    "aws-cdk-lib": "2.59.0",
-    "constructs": "^10.0.0"
+    "@types/node": "^18.13.0",
+    "cdk": "^2.65.0",
+    "prettier": "2.5.1",
+    "pretty-quick": "3.1.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
