--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "pretty-quick": "3.1.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "copyfiles": "^2.4.1"
   }
 }
