--- a/packages/compendium-cdk/tsconfig.json
+++ b/packages/compendium-cdk/tsconfig.json
@@ -1,24 +1,14 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["es2020"],
-    "declaration": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": false,
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "experimentalDecorators": true,
-    "strictPropertyInitialization": false,
+    "sourceMap": true,
+    "outDir": "./dist",
+    "skipLibCheck": true,
     "types": ["node"]
   },
   "include": ["./lib/*"],
-  "exclude": ["node_modules", "cdk.out"]
+  "exclude": ["node_modules", "dist", "cdk.out"]
 }
