--- a/packages/compendium-ui/package.json
+++ b/packages/compendium-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@compendium-app/compendium-ui",
   "description": "Compendium ui to display network of nodes from stored data",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "license": "MIT",
   "author": {
     "name": "Jakub Knejzlik",
@@ -17,7 +17,10 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": ["./dist/compendium-ui.es.js", "./dist/style.css"],
+      "import": [
+        "./dist/compendium-ui.es.js",
+        "./dist/style.css"
+      ],
       "require": "./dist/compendium-ui.umd.js"
     },
     "./dist/style.css": "./dist/style.css"
