--- a/packages/compendium-ui/package.json
+++ b/packages/compendium-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zatkoa/compendium-ui",
+  "name": "@compendium-app/compendium-ui",
   "description": "Compendium ui to display network of nodes from stored data",
   "version": "0.4.0",
   "license": "MIT",
