--- a/.github/workflows/compendium-cdk.yml
+++ b/.github/workflows/compendium-cdk.yml
@@ -3,8 +3,8 @@ name: Compendium CDK CI/CD
 
 on: 
   push:
-    # branches:
-    # - main
+    branches:
+    - main
     paths:
     - 'packages/compendium-cdk/**'
     
