--- a/.github/workflows/compendium-ui.yml
+++ b/.github/workflows/compendium-ui.yml
@@ -3,8 +3,8 @@ name: Compendium UI CI/CD
 
 on: 
   push:
-    # branches:
-    # - main
+    branches:
+    - main
     paths:
     - 'packages/compendium-ui/**'
     
