feat(compendium-ui) fix workspaces and other small adjustments

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "workspaces": [
     "packages/*",
-    "sites/*"
+    "examples/*"
   ],
   "devDependencies": {
     "@types/node": "^18.13.0",
