--- a/packages/compendium-ui/package.json
+++ b/packages/compendium-ui/package.json
@@ -29,10 +29,10 @@
     "@ant-design/icons": "^5.2.6",
     "@apollo/client": "^3.7.1",
     "antd": "^4.24.14",
-    "aws-appsync": "^4.1.9",
+    "aws-appsync": "^4.1.5",
     "aws-appsync-auth-link": "^3.0.7",
     "aws-appsync-subscription-link": "^3.0.10",
-    "graphql": "15.3.0",
+    "graphql": "^15.8.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.40",
     "react": "^18.0.0",
