--- a/examples/compendium-site/package.json
+++ b/examples/compendium-site/package.json
@@ -7,7 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "compendium-ui": "*",
+    "compendium-ui": "../../packages/compendium-ui",
     "@apollo/client": "^3.7.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
