--- a/local/env.js.example
+++ b/local/env.js.example
@@ -1,3 +1,3 @@
 window.ENV = {
-  REACT_APP_COMPENDIUM_GRAPHQL_URL:"https://azm5zypek3.execute-api.eu-central-1.amazonaws.com/api/graphql"
+  REACT_APP_COMPENDIUM_GRAPHQL_URL:"https://example.com/api/graphql"
 }
