--- a/packages/compendium-ui/package.json
+++ b/packages/compendium-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@compendium-app/compendium-ui",
   "description": "Compendium ui to display network of nodes from stored data",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "license": "MIT",
   "author": {
     "name": "Jakub Knejzlik",
@@ -26,12 +26,11 @@
     "./dist/style.css": "./dist/style.css"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.1.4",
+    "@ant-design/icons": "^5.2.6",
     "@apollo/client": "^3.7.1",
-    "antd": "^4.23.6",
+    "antd": "^4.24.14",
     "aws-appsync": "^4.1.5",
     "aws-appsync-auth-link": "^3.0.7",
-    "aws-appsync-react": "^4.0.11",
     "aws-appsync-subscription-link": "^3.0.10",
     "graphql": "^15.8.0",
     "moment": "^2.29.4",
@@ -40,10 +39,7 @@
     "react-dom": "^18.0.0",
     "react-graph-vis": "^1.0.7",
     "react-router-dom": "^6.3.0",
-    "string-hash": "^1.1.3",
-    "vis-data": "^7.1.4",
-    "vis-network": "^9.1.2",
-    "vis-react": "^0.5.1"
+    "string-hash": "^1.1.3"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.20.0",
